--- a/src/css/partials/header.css
+++ b/src/css/partials/header.css
@@ -33,8 +33,8 @@
 .global-header {
   background-color: var(--bs-black);
   color: white;
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 1fr auto;
   align-items: center;
   fill: white;
   width: 100%;
@@ -74,35 +74,43 @@
   background-color: rgba(255, 255, 255, 0.1);
 }
 
-#global-nav-toggle {
+.global-nav__toggle {
   background-color: transparent;
   border: none;
   color: white;
   font-size: 0.875rem;
   padding: 1rem;
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
-  text-transform: uppercase;
   border-left: 1px solid var(--bs-grey-5);
   cursor: pointer;
   transition: background-color 0.2s;
 }
 
-#global-nav-toggle:hover {
+.global-nav__toggle:hover {
   background-color: rgba(255, 255, 255, 0.1);
+}
+
+.global-nav__toggle--closed {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  text-transform: uppercase;
+}
+
+.global-nav__toggle--open {
+  display: none;
+  align-items: center;
+  gap: 0.5rem;
+  text-transform: uppercase;
 }
 
 /* Global Navigation Menu */
 .global-nav {
-  position: absolute;
-  top: 100%;
-  left: 0;
-  right: 0;
-  background-color: var(--bs-black);
-  border-top: 1px solid var(--bs-grey-5);
-  display: none;
-  z-index: 1000;
+  width: 100%;
+  grid-column: 1/3;
+  border-top: 1px solid #333;
+  max-height: 0;
+  overflow: hidden;
+  transition: all 0.5s;
 }
 
 .global-nav__section-heading {
@@ -147,6 +155,31 @@
 
 .global-nav__split-button__toggle:hover {
   background-color: rgba(255, 255, 255, 0.1);
+}
+
+/* Menu button state changes */
+.global-nav__toggle[aria-expanded="true"] .global-nav__toggle--closed {
+  display: none;
+}
+
+.global-nav__toggle[aria-expanded="true"] .global-nav__toggle--open {
+  display: flex;
+}
+
+/* Show menu when active */
+.global-nav.show {
+  max-height: 1000px;
+}
+
+.global-nav button {
+  background-color: transparent;
+  border: 0;
+  padding: 1rem;
+  cursor: pointer;
+}
+
+.global-nav svg {
+  --icon-color: white;
 }
 
 /* Hero banner */
